# dectl

./: .gitignore  Cargo.toml  README.md  REVIEWER.md  install.sh  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.md
docs/desarrollo/: README.md
docs/developpe/: README.md
docs/user/: README.md  flow.md  quickstart.md
docs/usuario/: README.md  flujo.md  quickstart.md
scripts/: dectl-demo.sh  install.sh  release.sh
specs/agents/: constitution.md  data-model.md  plan.md  requirements.md  research.md  spec.md  tasks.md
specs/cli/: constitution.md  data-model.md  plan.md  requirements.md  research.md  spec.md  tasks.md
specs/dot-dec/: constitution.md  data-model.md  plan.md  requirements.md  research.md  spec.md  tasks.md
specs/integration/: constitution.md  plan.md  requirements.md  research.md  spec.md  tasks.md
specs/master/: constitution.md  data-model.md  plan.md  requirements.md  research.md  spec.md  strategic-notes.md  tasks.md
src/: main.rs
src/agent/: describe.rs  list.rs  loader.rs  log.rs  mod.rs  parallel.rs  run.rs  runner.rs  schema.rs  trust.rs
src/core/: bootstrap.rs  config.rs  db.rs  error.rs  git.rs  mod.rs  output.rs  threadpool.rs  toml_util.rs
src/doctor/: mod.rs
src/memory/: add.rs  db.rs  delete.rs  edit.rs  export.rs  import.rs  list.rs  mod.rs  query.rs  restore.rs  search.rs  show.rs
src/migrate/: engine.rs  mod.rs
src/project/: auto_fill.rs  context.rs  info.rs  init.rs  mod.rs  scan.rs  templates.rs  watch.rs
src/protocol/: exec_from_file.rs  mod.rs
tests/: agent_commands.rs  e2e_anchor.rs  e2e_integration.rs  flow_tests.rs  memory_commands.rs  project_commands.rs  protocol_commands.rs  session_commands.rs  smoke.sh  spec_add.rs  spec_init.rs  workflow_commands.rs
(+69 files in other folders)
