[package]
name = "dectl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
chrono = "0.4"
ignore = "0.4"
is-terminal = "0.4"
colored = "2.1"
ctrlc = "3.2"
dirs = "5.0"
regex = "1.10"
tempfile = "3.8"
which = "6.0"
clap_complete = "4.5"

[profile.release]
lto = true
codegen-units = 1
strip = true